# msdfgen-wasm

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.json
.github/workflows/: build.yml  publish.yml
cpp/: binding.cpp
src/: loader.js  loader.ts
